analyzer/tests/snapshots/errors__overflow_u64_neg.snap
---
source: analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src_str)"

---
error: literal out of range for `u64`
  ┌─ [snippet]:3:7
  │
3 │   u64(-1)
  │       ^^ does not fit into type `u64`


