analyzer/tests/snapshots/errors__overflow_u8_neg.snap
---
source: analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src_str)"

---
error: literal out of range for `u8`
  ┌─ [snippet]:3:6
  │
3 │   u8(-1)
  │      ^^ does not fit into type `u8`


