analyzer/tests/snapshots/errors__pow_with_signed_exponent.snap
---
source: analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---


SignedExponentNotAllowed on line 5
[31mbase ** exp[0m
