analyzer/tests/snapshots/errors__pow_with_wrong_capacity.snap
---
source: analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---


TypeError on line 5
[31mbase ** exp[0m
